--- a/package.json
+++ b/package.json
@@ -1,32 +1,67 @@
 {
-  "name": "blog",
-  "private": true,
-  "sideEffects": false,
-  "type": "module",
-  "scripts": {
-    "build": "remix build",
-    "dev": "remix dev --manual",
-    "start": "remix-serve ./build/index.js",
-    "typecheck": "tsc"
-  },
-  "dependencies": {
-    "@remix-run/css-bundle": "^2.3.1",
-    "@remix-run/node": "^2.3.1",
-    "@remix-run/react": "^2.3.1",
-    "@remix-run/serve": "^2.3.1",
-    "isbot": "^3.6.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@remix-run/dev": "^2.3.1",
-    "@remix-run/eslint-config": "^2.3.1",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "eslint": "^8.38.0",
-    "typescript": "^5.1.6"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  }
+    "name": "blog",
+    "private": true,
+    "sideEffects": false,
+    "type": "module",
+    "scripts": {
+        "build": "remix build",
+        "dev": "remix dev --manual",
+        "start": "remix-serve ./build/index.js",
+        "typecheck": "tsc"
+    },
+    "dependencies": {
+        "@heroicons/react": "^2.0.18",
+        "@prisma/client": "^5.7.1",
+        "@remix-run/css-bundle": "^2.3.1",
+        "@remix-run/node": "^2.3.1",
+        "@remix-run/react": "^2.3.1",
+        "@remix-run/serve": "^2.3.1",
+        "@types/bcrypt": "^5.0.2",
+        "@types/nodemailer": "^6.4.14",
+        "array-unique": "^0.3.2",
+        "bcrypt": "^5.1.1",
+        "cloudinary": "^1.41.1",
+        "copy-to-clipboard": "^3.3.3",
+        "dashify": "^2.0.0",
+        "fuse.js": "^7.0.0",
+        "isbot": "^3.6.8",
+        "nimajs": "^0.2.8",
+        "nodemailer": "^6.9.7",
+        "randomstring": "^1.3.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-markdown": "^9.0.1",
+        "react-textarea-autosize": "^8.5.3",
+        "rehype-highlight": "^7.0.0",
+        "rehype-slug": "^6.0.0",
+        "remark": "^15.0.1",
+        "remark-gfm": "^4.0.0",
+        "remark-rehype": "^11.0.0",
+        "remark-strip-html": "^1.0.2",
+        "remark-toc": "^9.0.0",
+        "remix-sitemap": "^3.2.0",
+        "strip-markdown": "^6.0.0"
+    },
+    "devDependencies": {
+        "@remix-run/dev": "^2.3.1",
+        "@remix-run/eslint-config": "^2.3.1",
+        "@tailwindcss/typography": "^0.5.10",
+        "@types/array-unique": "^0.3.3",
+        "@types/dashify": "^1.0.3",
+        "@types/randomstring": "^1.1.11",
+        "@types/react": "^18.2.20",
+        "@types/react-dom": "^18.2.7",
+        "autoprefixer": "^10.4.16",
+        "eslint": "^8.38.0",
+        "postcss": "^8.4.32",
+        "prisma": "^5.7.1",
+        "tailwindcss": "^3.3.6",
+        "typescript": "^5.1.6"
+    },
+    "engines": {
+        "node": ">=18.0.0"
+    },
+    "prisma": {
+        "seed": "ts-node-esm prisma/seed.ts"
+    }
 }
